// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-budget-exhausted-hash-change.acceptance given: [matrix.2.row2] hash change after exhaustion stays exhausted when: [t1] second attempt exhausts budget (hash A variant) then: snapshot [t1]: exhausted on hash A 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = peer reviewer budget exhausted: mock-reviewer
   ├─ options
   │  ├─ increase budget
   │  │  └─ rhx route.guard.budget --for review --add N --peer mock-reviewer --stone 1.execute
   │  └─ approve as-is
   │     └─ rhx route.stone.set --stone 1.execute --as approved
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      └─ reviews
          └─ r1: mock-reviewer (l1, 2/2, exhausted)
              ├─ exhausted
              └─ review: .route/1.execute.guard.review.i1.ddc834428e3392b902387c603242a48c7cb97f11b908eb83076ccc8bba7cfdc3.r1.md
"
`;

exports[`driver.route.peer-budget-exhausted-hash-change.acceptance given: [matrix.2.row2] hash change after exhaustion stays exhausted when: [t2] artifact changes to hash B, attempt to pass then: snapshot [t2]: hash B, still exhausted 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = peer reviewer budget exhausted: mock-reviewer
   ├─ options
   │  ├─ increase budget
   │  │  └─ rhx route.guard.budget --for review --add N --peer mock-reviewer --stone 1.execute
   │  └─ approve as-is
   │     └─ rhx route.stone.set --stone 1.execute --as approved
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      └─ reviews
          └─ r1: mock-reviewer (l1, 2/2, exhausted)
              └─ exhausted
"
`;

exports[`driver.route.peer-budget-exhausted-hash-change.acceptance given: [matrix.2.row2] hash change after exhaustion stays exhausted when: [t3] artifact changes to hash C, still exhausted then: snapshot [t3]: hash C, exhausted persists 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = peer reviewer budget exhausted: mock-reviewer
   ├─ options
   │  ├─ increase budget
   │  │  └─ rhx route.guard.budget --for review --add N --peer mock-reviewer --stone 1.execute
   │  └─ approve as-is
   │     └─ rhx route.stone.set --stone 1.execute --as approved
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      └─ reviews
          └─ r1: mock-reviewer (l1, 2/2, exhausted)
              └─ exhausted
"
`;
